feat: authority tenets examples and ai auth cyber governments

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -259,6 +259,7 @@ l_english:
 		building_tec_aiauth_3_desc:0 "Highly monitored installations where part of the processing capacity of the governing AI handles different tasks at a planetary scale."
 
 		job_tec_ai_computator:0 "Computator"
+		job_tec_ai_computator_icon: "£job_tec_ai_computator£"
 		job_tec_ai_computator_plural:0 "Computators"
 		job_tec_ai_computator_desc:0 "Computators are experienced members of the ruling class dedicated to serve and operate the orders and functions of its empire AI."
 		job_tec_ai_computator_effect_desc:0 "['concept_tec_ruler_job_tec_ai_computator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!"
@@ -275,6 +276,7 @@ l_english:
 		mod_job_tec_ai_operator_add:0 "$job_tec_ai_operator$ Jobs"
 
 		job_tec_ai_high_ordinator:0 "High Ordinator"
+		job_tec_ai_high_ordinator_icon: "£job_tec_ai_high_ordinator£"
 		job_tec_ai_high_ordinator_plural:0 "High Ordinators"
 		job_tec_ai_high_ordinator_desc:0 "Serving the faith and the doctrines promulgated by its ruling AI, the highest rank of Ordinators ensure both are streamlined and well tuned."
 		job_tec_ai_high_ordinator_effect_desc:0 "['concept_tec_ruler_job_tec_ai_high_ordinator_plural_icon'] use §Y$tec_loc_consumer_goods$§! to produce §Y$tec_loc_unity$§!, §Y$tec_loc_amenities$§! and §Y$tec_loc_sr_tec_ai_power$§!."
@@ -3955,6 +3957,7 @@ l_english:
 
 	building_tec_planetary_node_center: "Planetary Node Center"
 	building_tec_planetary_node_center_desc: "The Planetary Node Center, a nexus of governance, houses the infrastructure of the Planetary AI Node. With computational power at its core, it coordinates resources and drives optimized production. Guiding the planet's development, it ensures prosperity under the watchful eye of artificial intelligence. A symbol of advancement, it shapes our empire's future with AI and organic ingenuity."
+	building_tec_planetary_node_center_effect: "When this building is finished, an §Y$tec_loc_ai_planetary_node$§! will be fragmented on this planet as its §YGovernor§!. You will be able to configure the newly created AI Node."
 
 
 
