--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -113,6 +113,15 @@
 	civic_tooltip_democratic:0 "Has ['concept_tec_authority_type_democratic_type'] Authority."
 	civic_tooltip_not_democratic:0 "Is not ['concept_tec_authority_type_democratic_type'] Authority."
 
+	civic_tooltip_oligarchic:0 "Has ['concept_tec_authority_type_oligarchic_type'] Authority."
+	civic_tooltip_not_oligarchic:0 "Is not ['concept_tec_authority_type_oligarchic_type'] Authority."
+
+	civic_tooltip_dictatorial:0 "Has ['concept_tec_authority_type_dictatorial_type'] Authority."
+	civic_tooltip_not_dictatorial:0 "Is not ['concept_tec_authority_type_dictatorial_type'] Authority."
+
+	civic_tooltip_imperial:0 "Has ['concept_tec_authority_type_imperial_type'] Authority."
+	civic_tooltip_not_imperial:0 "Is not ['concept_tec_authority_type_imperial_type'] Authority."
+
 	civic_tooltip_dic_imp:0 "Has ['concept_tec_authority_type_dictatorial'] or ['concept_tec_authority_type_imperial_type'] Authority"
 	civic_tooltip_dic_imp_ai:0 "Has ['concept_tec_authority_type_dictatorial'], ['concept_tec_authority_type_imperial'] or ['concept_tec_authority_type_ai_auth_type'] Authority"
 	civic_tooltip_dem_oli:0 "Has ['concept_tec_authority_type_democratic'] or ['concept_tec_authority_type_oligarchic_type'] Authority"
