--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -737,6 +737,10 @@
 	councilor_ruler_auth_tec_direct_democratic_female: "$councilor_ruler_female$"
 	councilor_ruler_auth_tec_direct_democratic_desc: ""
 
+	councilor_ruler_auth_tec_ecclesiocracy: "$councilor_ruler$"
+	councilor_ruler_auth_tec_ecclesiocracy_female: "$councilor_ruler_female$"
+	councilor_ruler_auth_tec_ecclesiocracy_desc: ""
+
 	councilor_ruler_auth_tec_theocracy: "$councilor_ruler$"
 	councilor_ruler_auth_tec_theocracy_female: "$councilor_ruler_female$"
 	councilor_ruler_auth_tec_theocracy_desc: ""
