--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -125,7 +125,7 @@
 
 	auth_cyber_tec_ai_collectivist: "AI Synaptic Matrix"
 	auth_cyber_tec_ai_collectivist_desc: "Citizens' minds are partially merged into a collective network overseen by the AI, allowing for rapid information sharing and decision-making while maintaining a semblance of individuality."
-	auth_cyber_tec_ai_collectivist_tt: ""
+	auth_cyber_tec_ai_collectivist_tt: "$unlock_edict_tt$: ['concept_tec_edict_tec_resonance_protocol']"
 
 
 	TEC_AUTH_AI_RULER_REPLACE:0 "§HRuler:§!\n-The Ruler is replaced with an ['concept_tec_ai_node_icon'], an immortal §YMechanical Unit§!, which cannot gain experience naturally, needing ['concept_tec_sr_tec_ai_power'] for upkeep and to gain experience"
