--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2049,6 +2049,11 @@
 	concept_tec_edict_tec_synaptic_surge_protocol_alias: "$edict_tec_synaptic_surge_protocol$"
 	concept_tec_edict_tec_synaptic_surge_protocol_icon: "£edict£ $edict_tec_synaptic_surge_protocol$ Edict"
 	concept_tec_edict_tec_synaptic_surge_protocol_alias_icon: "£edict£ $edict_tec_synaptic_surge_protocol$"
+
+	concept_tec_edict_tec_resonance_protocol: "$edict_tec_resonance_protocol$ Edict"
+	concept_tec_edict_tec_resonance_protocol_alias: "$edict_tec_resonance_protocol$"
+	concept_tec_edict_tec_resonance_protocol_icon: "£edict£ $edict_tec_resonance_protocol$ Edict"
+	concept_tec_edict_tec_resonance_protocol_alias_icon: "£edict£ $edict_tec_resonance_protocol$"
  # /
  # Policy
 	concept_tec_ethic_policy: "Ethic Policy"
