--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -31,6 +31,7 @@
 	tec_loc_desc_separator: "-----------"
 	tec_loc_effects_section: "§EEffects:§!"
 	tec_loc_warning:0 "£trigger_tec_warning£"
+	tec_blank_key: "tec_blank"
 
 	tec_loc_feature_not_ready:0 "§R£trigger_tec_warning_red£ Feature not ready§!"
 
