--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -117,17 +117,17 @@
  tec_cult_tec_tenet_theocracy_desc: "$tec_cui_cult_tag_authority_tenet$\n$auth_tec_theocracy_desc$"
  tec_cult_tec_tenet_theocracy_effect: "Replaces ['authority:auth_dictatorial:auth_dictatorial'] with ['authority:auth_dictatorial:auth_tec_theocracy'] Advanced Authority"
 
- tec_cult_tec_tenet_cyber_creed: "$[tec_cyber_creed_authority_key]$"
- tec_cult_tec_tenet_cyber_creed_desc: "$tec_cui_cult_tag_authority_tenet$\n$[tec_cyber_creed_authority_key]_desc$"
+ tec_cult_tec_tenet_cyber_creed: "[from.tec_cyber_creed_authority_name]"
+ tec_cult_tec_tenet_cyber_creed_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_creed_authority_desc]"
  tec_cult_tec_tenet_cyber_creed_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_creed_authority_key]'] Advanced Authority"
  tec_cult_tec_tenet_cyber_creed_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $situation_cybernetic_creed_cyberization$§! Situation"
 
- tec_cult_tec_tenet_cyber_individualist: "$[tec_cyber_individualist_key]$"
- tec_cult_tec_tenet_cyber_individualist_desc: "$tec_cui_cult_tag_authority_tenet$\n$[tec_cyber_individualist_key]_desc$"
+ tec_cult_tec_tenet_cyber_individualist: "[from.tec_cyber_individualist_name]"
+ tec_cult_tec_tenet_cyber_individualist_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_individualist_desc]"
  tec_cult_tec_tenet_cyber_individualist_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_individualist_key]'] Advanced Authority"
  tec_cult_tec_tenet_cyber_individualist_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YIndividualist§! ending"
 
- tec_cult_tec_tenet_cyber_collectivist: "$[tec_cyber_collectivist_key]$"
- tec_cult_tec_tenet_cyber_collectivist_desc: "$tec_cui_cult_tag_authority_tenet$\n$[tec_cyber_collectivist_key]_desc$"
+ tec_cult_tec_tenet_cyber_collectivist: "[from.tec_cyber_collectivist_name]"
+ tec_cult_tec_tenet_cyber_collectivist_desc: "$tec_cui_cult_tag_authority_tenet$\n[from.tec_cyber_collectivist_desc]"
  tec_cult_tec_tenet_cyber_collectivist_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_collectivist_key]'] Advanced Authority"
  tec_cult_tec_tenet_cyber_collectivist_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $futureshock_chain_title$§! Event Chain Finished with a §YCollectivist§! ending "
