--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1558,3 +1558,10 @@ policy_tec_aiauth_idle_share_policy_no_idle_desc: "AI Nodes within our AI Admini
 policy_tec_aiauth_idle_share_policy_grow_idle: "Idle AI Node Growth"
 policy_tec_aiauth_idle_share_policy_grow_idle_name: "Idle AI Node Growth"
 policy_tec_aiauth_idle_share_policy_grow_idle_desc: "Even our idle AI Nodes possess untapped potential and deserve opportunities for growth, as such we allocate resources to nurture and develop these nodes, allowing them to contribute to our empire's advancement.\n\n"
+
+edict_tec_synaptic_surge_protocol: "Synaptic Surge Protocol"
+edict_tec_synaptic_surge_protocol_desc: "Activate the AI network's latent potential to temporarily supercharge citizens' cognitive and physical capabilities. Neural pathways are optimized, reaction times are reduced to milliseconds, and creative problem-solving reaches unprecedented levels. However, the intense augmentation may lead to increased strain on individuals and the supporting infrastructure."
+
+edict_tec_resonance_protocol: "Resonance Protocol"
+edict_tec_resonance_protocol_desc: "Initiate a deep synchronization within the AI Synaptic Matrix, pooling the collective cognitive resources of the population. This harmony allows each AI node to operate with unprecedented efficiency, leveraging the shared mental capacity of the entire network."
+edict_tec_resonance_protocol_tt: "§E$tec_loc_ai_ruler_node$:§!\n$MOD_RULER_SKILL_ADD$: §G+1§!\n$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$: §G+10%§!\n\n§E$tec_loc_ai_councilor_node$s:§!\n$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$: §G+5%§!\n\n§E$tec_loc_ai_planetary_node$s:§!\n$MOD_COUNCIL_AGENDA_PROGRESS_SPEED$: §G+2.5%§!\n\n§E[TecGetComputatorIcon][TecGetComputatorPlural], [GetAdministratorPluralWithIcon]:§!\n$mod_planet_administrators_sr_tec_ai_power_produces_add$: §G+0.25§!\n$MOD_POP_HAPPINESS$: §R-15%§!"
