--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -178,7 +178,7 @@
 
 	TEC_FAC_SPI_THEOCRACY:0 "Divine Empire"
 	TEC_FAC_SPI_NO_THEOCRACY:0 "Divine Empire"
-	TEC_FAC_SPI_THEOCRACY_DESC:0 "Having a §YTheocratic Authority§! or §YDivine empire§! type of government or civics will §Gplease§! the [Root.GetName]."
+	TEC_FAC_SPI_THEOCRACY_DESC:0 "Having a §Y$auth_tec_theocracy$ or $auth_tec_ecclesiocracy$ Authority§! or §YDivine empire§! type of government or civics will §Gplease§! the [Root.GetName]."
 
 	TEC_FAC_SPI_SHROUD_BOON:0 "Shrouded Boon"
 	TEC_FAC_SPI_NO_SHROUD_BOON:0 "Shrouded Boon"
