feat: notification for tenets, event for ai auth

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -320,6 +320,7 @@ ADD_NAVAL_CAPACITY_FROM_SOLDIERS:0 "Naval Capacity from Soldier Jobs: §G+1§!"
 trade_federation_passive: "Free Trade Agreements"
 trade_value_1:0 "$trade_federation$"
 trade_value_2:0 "Standardization of Measures"
+TRAIT_EXD_EFFECT: "Replaces $r_food$ Upkeep with $r_energy$ Upkeep"
 
 
 concept_hegemony_federation_desc: "$hegemony_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_authoritarian$\n- Has ['civic:civic_machine_servitor'] Civic\n- Has ['civic:civic_tec_hive_brood_overminds'] Civic\n- Has ['tradition:tr_domination_finish:tr_domination_federations_finish']"
@@ -381,7 +382,13 @@ tec_cyber.1500.col.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_t
 tec_cyber.1500.ind.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_individualist']"
 tec_cyber.1500.no.tt: "No changes to our Authority and no Tenet unlocked"
 
-tec_cyber.1.name: ""
+tec_cyber.1.name: "The Algorithmic Rearrangement"
+tec_cyber.1.desc.individualist: "The integration of cybernetic implants has amplified individual agency within our AI-governed society. Citizens now possess unprecedented neural interfaces, allowing direct and personalized interaction with the administrative AI, each individual capable of leveraging AI resources for personal growth and societal contribution while maintaining their unique identities and autonomy."
 
+tec_cyber.1.desc.collectivist: "Cybernetic implants have facilitated a deeper merger between our populace and the governing AI Nodes, transforming our society into a vast, interconnected neural network. While individual consciousness remains, the implants allow for seamless thought-sharing and collective processing, dramatically enhancing the AI's administrative capabilities. This symbiosis has birthed a new form of collective intelligence, where the boundaries between AI governance and citizen participation have become beautifully blurred."
 
-TRAIT_EXD_EFFECT: "Replaces $r_food$ Upkeep with $r_energy$ Upkeep"
+tec_cyber.1.desc.neutral: "The adoption of cybernetic implants has been measured and pragmatic, enhancing our existing AI Administration without fundamentally altering societal structures. These implants serve as efficient interfaces between citizens and the AI government, streamlining communication and data processing. While the technology has improved overall efficiency and decision-making, our society maintains a familiar balance between technological integration and organic social dynamics."
+
+tec_cyber.1.a: "Personal AI Uplinks for all!"
+tec_cyber.1.b: "The collective of AI and organic mind, blurred..."
+tec_cyber.1.c: "$cyber_keep_auth_option$"
