--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -2367,7 +2367,7 @@
 
 	leader_trait_tec_aiauth_gene_mix: "Organic Circuitry"
 	leader_trait_tec_aiauth_gene_mix_desc: "The AI Node incorporates a fusion of biological material and code, intertwining organic neurons and circuitry within its components. This integration blurs the line between flesh and technology, imbuing the AI Node with a unique synergy that combines the computational prowess of artificial intelligence with the adaptability and complexity of biological systems."
-	leader_trait_tec_aiauth_gene_mix_master_cloner_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_master_cloner£ $job_tec_master_cloner_plural$, affected by scaling: §G+2§!"
+	leader_trait_tec_aiauth_gene_mix_master_cloner_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_cloner£ $job_tec_cloner_plural$: §G+2§!"
 
 	leader_trait_tec_aiauth_replicant_main: "Bio Mechanical Terminals"
 	leader_trait_tec_aiauth_replicant_main_desc: "The AI Node utilizes bio-mechanical terminals, integrating the intricate fusion of organics and microscopic machinery. These advanced terminals form a symbiotic connection, blending the precision of nanotechnology with the inherent complexity and adaptability of biological systems, granting the AI Node unparalleled versatility in its operations."
@@ -2375,7 +2375,7 @@
 
 	leader_trait_tec_aiauth_superior_cybernetics_main: "Node-Organic Coupling"
 	leader_trait_tec_aiauth_superior_cybernetics_main_desc: "The AI Node and organics achieve a profound coupling, enabling a convergence of insights. Through this intricate connection, the AI Node gains the ability to peer into the depths of organic perspectives, while organics gain a glimpse into the vast computational intelligence of the AI Node. This mutual exchange of understanding fosters a harmonious synergy, unlocking new realms of knowledge and paving the way for unprecedented collaboration and innovation."
-	leader_trait_tec_aiauth_superior_cybernetics_main_master_roboticist_bonus: "$tec_loc_sr_tec_ai_power$ from £job_tec_master_roboticist£ $job_tec_master_roboticist_plural$, affected by scaling: §G+2§!"
+	leader_trait_tec_aiauth_superior_cybernetics_main_master_roboticist_bonus: "$tec_loc_sr_tec_ai_power$ from £job_augmentor£ $job_augmentor_plural$: §G+2§!"
 
 	leader_trait_tec_aiauth_synthetic: "Synthetic Interface"
 	leader_trait_tec_aiauth_synthetic_desc: "The AI Node gains the ability to interface and communicate with synthetic units, fostering a symbiotic relationship that enhances the overall efficiency and synergy between artificial and synthetic intelligence. Simultaneously, synthetic units establish a seamless connection with the centralized network of the $tec_aiauth_ruler$, enabling efficient data exchange and access to vast computational resources."
