--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -48,6 +48,12 @@
 
  tec_cui_cult_deactivate_generic: "Lose all effects of this Tenet"
 
+ tec_cult_cui.5.name: "$mod_tec_cult_points_add$ Available"
+ tec_cult_cui.5.desc: "We have unspent $mod_tec_cult_points_add$ that could be used to refine our government and ideology."
+
+ tec_cult_cui.7.name: "New Tenet Available"
+ tec_cult_cui.7.desc: "We have a new Tenet available, click here to view."
+
  tec_cult_tec_tenet_state_religion: "State Religion"
  tec_cult_tec_tenet_state_religion_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
  tec_cult_tec_tenet_state_religion_effect: "[GetPriestIcon] [GetPriestPlural] Political Power: §Y+0.50§!\n\nCan build £building£ ['building:building_temple'] buildings on your planets and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\n\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_unity$§!"
