feat: implemented ai corp cyber govs partially

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3810,6 +3810,7 @@ l_english:
 	mod_tec_worker_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_workers$"
 	mod_tec_slave_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_pop_category_slave$"
 	mod_tec_criminal_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_planet_criminals$"
+	mod_tec_unemployed_lifestyle_trade_value_add: "$tec_loc_trade_value$ from $mod_base_unemployment_resources$"
 	mod_tec_pop_lifestyle_trade_value_add: "$tec_loc_trade_value$ from £pop£ Pops"
 	mod_tec_planet_automation_mult: "£trigger_tec_automation£ Automated Production Output"
 	mod_tec_tech_rare_draw_chance_mult: "Chance for §MRare§! Research Options"
