--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -121,11 +121,11 @@
 
 	auth_cyber_tec_ai_individualist: "AI-Augmented Autonomy"
 	auth_cyber_tec_ai_individualist_desc: "The AI enhances rather than replaces individual decision-making, merging sophont and AI reasoning and ruler-ship, a true combination of individuality and collective knowledge."
-	auth_cyber_tec_ai_individualist_tt: "All non-AI Node £leader£ Leaders get the ['trait:leader_trait_tec_aiauth_cyber_assistant_uplink'] Trait\n$unlock_edict_tt$: ['concept_tec_edict_tec_synaptic_surge_protocol']"
+	auth_cyber_tec_ai_individualist_tt: "All non-AI Node £leader£ Leaders get the ['trait:leader_trait_tec_aiauth_cyber_assistant_uplink'] Trait\n$unlock_edict_tt$ ['concept_tec_edict_tec_synaptic_surge_protocol']"
 
 	auth_cyber_tec_ai_collectivist: "AI Synaptic Matrix"
 	auth_cyber_tec_ai_collectivist_desc: "Citizens' minds are partially merged into a collective network overseen by the AI, allowing for rapid information sharing and decision-making while maintaining a semblance of individuality."
-	auth_cyber_tec_ai_collectivist_tt: "$unlock_edict_tt$: ['concept_tec_edict_tec_resonance_protocol']"
+	auth_cyber_tec_ai_collectivist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_resonance_protocol']"
 
 
 	TEC_AUTH_AI_RULER_REPLACE:0 "§HRuler:§!\n-The Ruler is replaced with an ['concept_tec_ai_node_icon'], an immortal §YMechanical Unit§!, which cannot gain experience naturally, needing ['concept_tec_sr_tec_ai_power'] for upkeep and to gain experience"
@@ -141,6 +141,15 @@
 	auth_cyber_creed_tec_ai_corporate: "AugmentSacred AI Holdings"
 	auth_cyber_creed_tec_ai_corporate_desc: "A divine corporate entity led by a super intelligent AI, working in concert with augmented believers to achieve a sacred synthesis of economic prowess and spiritual fulfillment."
 	concept_auth_cyber_creed_tec_ai_corporate: "$auth_cyber_creed_tec_ai_corporate$"
+
+	auth_cyber_tec_ai_corporate_individualist: "AI-Corporate Neuromarkets"
+	auth_cyber_tec_ai_corporate_individualist_desc: "By leveraging our AI administration's vast data processing capabilities, we've developed a hyper-personalized neuromarketing system. Each citizen's cybernetic implants interface directly with our corporate AI, allowing for real-time, individualized product suggestions and service optimizations.\n\nHowever, the deep integration of AI into personal neural networks may lead to concerns about data privacy and cognitive autonomy."
+	auth_cyber_tec_ai_corporate_individualist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_neuro_markets']"
+
+
+	auth_cyber_tec_ai_corporate_collectivist: "AI-Corporate Neuralnet"
+	auth_cyber_tec_ai_corporate_collectivist_desc: "Our AI administration has implemented a pervasive system of neural integration across our entire corporate structure. Through mandatory cybernetic implants, the collective cognitive capacity of our workforce and consumer base is continuously mined for valuable data and processing power.\n\nWhile corporate profits have skyrocketed, concerns about privacy invasion and mental fatigue are routinely dismissed as 'growing pains'."
+	auth_cyber_tec_ai_corporate_collectivist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_idle_mind_networking']"
 
 	# Regular Hives
 	auth_hive_mind:0 "Hive Mind"
