--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2054,6 +2054,16 @@
 	concept_tec_edict_tec_resonance_protocol_alias: "$edict_tec_resonance_protocol$"
 	concept_tec_edict_tec_resonance_protocol_icon: "£edict£ $edict_tec_resonance_protocol$ Edict"
 	concept_tec_edict_tec_resonance_protocol_alias_icon: "£edict£ $edict_tec_resonance_protocol$"
+
+	concept_tec_edict_tec_neuro_markets: "$edict_tec_neuro_markets$ Edict"
+	concept_tec_edict_tec_neuro_markets_alias: "$edict_tec_neuro_markets$"
+	concept_tec_edict_tec_neuro_markets_icon: "£edict£ $edict_tec_neuro_markets$ Edict"
+	concept_tec_edict_tec_neuro_markets_alias_icon: "£edict£ $edict_tec_neuro_markets$"
+
+	concept_tec_edict_tec_idle_mind_networking: "$edict_tec_idle_mind_networking$ Edict"
+	concept_tec_edict_tec_idle_mind_networking_alias: "$edict_tec_idle_mind_networking$"
+	concept_tec_edict_tec_idle_mind_networking_icon: "£edict£ $edict_tec_idle_mind_networking$ Edict"
+	concept_tec_edict_tec_idle_mind_networking_alias_icon: "£edict£ $edict_tec_idle_mind_networking$"
  # /
  # Policy
 	concept_tec_ethic_policy: "Ethic Policy"
