More debug things

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -1294,6 +1294,10 @@
  modifier_tec_debug_espionage_desc: "REPLACE_ME"
  modifier_tec_debug_xp: "REPLACE_ME"
  modifier_tec_debug_xp_desc: "REPLACE_ME"
+ modifier_tec_debug_ethic_shift: "Ethic Shift"
+ modifier_tec_debug_ethic_shift_desc: "$modifier_tec_debug_ethic_shift$"
+ modifier_tec_debug_pop_growth: "Pop Growth"
+ modifier_tec_debug_pop_growth_desc: "$modifier_tec_debug_pop_growth$"
  modifier_tec_debug_ai_force: "REPLACE_ME"
  tec_planet_validation_fix: "REPLACE_ME"
  tec_planet_validation_fix_desc: "REPLACE_ME"
