--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -561,13 +561,20 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
 
  decision_tec_debug_resources:0 "z-DEBUG-RESOURCES (£empire£)"
  decision_tec_debug_resources_desc:0 "Provides 5000 of each resource"
- decision_tec_debug_resources_tooltip:0 "Provides 5000 of each resource"
+ decision_tec_debug_resources_tooltip:0 "$decision_tec_debug_resources_desc$"
  modifier_tec_debug_resources:0 "$decision_tec_debug_resources$"
 
+ decision_tec_debug_ethic_shift:0 "z-DEBUG-ETHIC SHIFT (£planet£)"
+ decision_tec_debug_ethic_shift_desc:0 "Increases ethic shift massively - reactivate to disable"
+ decision_tec_debug_ethic_shift_tooltip:0 "$decision_tec_debug_ethic_shift_desc$"
+
+ decision_tec_debug_pop_growth:0 "z-DEBUG-POP GROWTH (£planet£)"
+ decision_tec_debug_pop_growth_desc:0 "Increases pop growth massively - reactivate to disable"
+ decision_tec_debug_pop_growth_tooltip:0 "$decision_tec_debug_pop_growth_desc$"
 
  decision_tec_debug_planet_building_speed:0 "z-DEBUG-BUILDING SPEED (£empire£)"
  decision_tec_debug_planet_building_speed_desc:0 "Increases planet building speed by 10000% - reactivate to disable"
- decision_tec_debug_planet_building_speed_tooltip:0 "Increases planet building speed by 10000% - reactivate to disable"
+ decision_tec_debug_planet_building_speed_tooltip:0 "$decision_tec_debug_planet_building_speed_desc$"
  modifier_tec_debug_planet_building_speed:0 "$decision_tec_debug_planet_building_speed$"
 
  decision_tec_debug_planet_districts:0 "z-DEBUG-INCREASE SLOTS (£planet£)"
@@ -584,6 +591,12 @@ tec_cui_tec_ai_empire_leader_loc: "Leader (non-AI Nodes)"
  decision_tec_debug_tech_speed_desc:0 "Increases tech research speed - reactivate to disable"
  decision_tec_debug_tech_speed_tooltip:0 "Increases tech research speed - reactivate to disable"
  modifier_tec_debug_tech_speed:0 "$decision_tec_debug_tech_speed$"
+
+ decision_tec_debug_exploration:0 "z-DEBUG-TECH SPEED (£empire£)"
+ decision_tec_debug_exploration_desc:0 "Increases ship speed, colonization, megastructure build speed - reactivate to disable"
+ decision_tec_debug_exploration_tooltip:0 "$decision_tec_debug_exploration_desc$"
+ modifier_tec_debug_exploration:0 "$decision_tec_debug_exploration$"
+ modifier_tec_debug_exploration_desc:0 "$decision_tec_debug_exploration_desc$"
 
  decision_tec_debug_ship_techs:0 "z-DEBUG-SHIP TECHS (£empire£)"
  decision_tec_debug_ship_techs_desc:0 "Provides all ship construction and starbase upgrade techs"
