feat: finished neuro markets implementation

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -375,11 +375,11 @@ auth_cyber_dictatorial_collectivist_scientist_effects: "$TABBED_NEW_LINE$$t$- $M
 
 auth_cyber_dictatorial_individualist_tt: "$unlock_edict_self_indictment_protocol$ $NEW_LINE$$mod_planet_cyborg_jobs_produces_mult$ from £job_enforcer£ $job_enforcer_plural$: §G+2.5%§!"
 
-machine_age.1090.general.tooltip: "$machine_age.geneslockedtooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed']\n$unlock_edict_tt$ §Y[GetCyberCreedEdict]§!"
-machine_age.1100.general.tooltip: "$machine_age.geneswaptooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed']"
+machine_age.1090.general.tooltip: "$machine_age.geneslockedtooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed', $tec_cult_tec_tenet_cyber_creed$]\n$unlock_edict_tt$ §Y[GetCyberCreedEdict]§!"
+machine_age.1100.general.tooltip: "$machine_age.geneswaptooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed', $tec_cult_tec_tenet_cyber_creed$]"
 
-tec_cyber.1500.col.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_colectivist']"
-tec_cyber.1500.ind.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_individualist']"
+tec_cyber.1500.col.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_colectivist', $tec_cult_tec_tenet_cyber_colectivist$]"
+tec_cyber.1500.ind.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_individualist', $tec_cult_tec_tenet_cyber_individualist$]"
 tec_cyber.1500.no.tt: "No changes to our Authority and no Tenet unlocked"
 
 tec_cyber.1.name: "The Algorithmic Rearrangement"
