--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1568,7 +1568,7 @@ edict_tec_resonance_protocol_tt: "§E$tec_loc_ai_ruler_node$:§!\n$MOD_RULER_SKI
 
 edict_tec_neuro_markets: "AI-Driven Neuro Markets"
 edict_tec_neuro_markets_desc: "Initiate an intensive period of hyper-targeted neuromarketing across our entire consumer base. By leveraging our planetary AI's advanced predictive algorithms and direct neural interfaces, we'll flood each individual's consciousness with personalized product suggestions and irresistible offers. This surge in tailored stimuli will drive consumer behavior to unprecedented levels, maximizing sales and market penetration."
-edict_tec_neuro_markets_tt: "$tec_loc_planet$s with ['building:building_tec_planetary_node_center']:\n$mod_pop_category_cyborgs_normal_resources_sr_tec_ai_power_upkeep_add$: §R+0.25§!\n$tec_loc_trade_value$ per $tec_loc_pop$: §G+1%§!"
+edict_tec_neuro_markets_tt: "$tec_loc_planet$s with ['building:building_tec_planetary_node_center']:\n$mod_pop_category_cyborgs_normal_resources_sr_tec_ai_power_upkeep_add$: §R+0.25§!\n$tec_loc_trade_value$ per §BCyborg§! $tec_loc_pop$: §G+1%§!"
 
 edict_tec_idle_mind_networking: "Idle Mind Networking"
 edict_tec_idle_mind_networking_desc: "Implement a program to "repurpose" the cognitive capacity of our unemployed population. By providing free neural implants and network access, we offer the jobless a chance to contribute to society through passive mental computations. This initiative taps into an previously unutilized resource pool, allowing our AI to harness vast amounts of processing power for its daily duties, data analysis, and even cryptocurrency mining."
