Feat: started work on patricorp cyber swaps

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -111,6 +111,15 @@
 
 	TEC_AUTH_PATROCORPORATE_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_imperial'], ['concept_tec_authority_type_corporate_type']"
 
+	auth_cyber_tec_patrocorporate_individualist: "AI-Corporate Neuromarkets"
+	auth_cyber_tec_patrocorporate_individualist_desc: "By leveraging our AI administration's vast data processing capabilities, we've developed a hyper-personalized neuromarketing system. Each citizen's cybernetic implants interface directly with our corporate AI, allowing for real-time, individualized product suggestions and service optimizations.\n\nHowever, the deep integration of AI into personal neural networks may lead to concerns about data privacy and cognitive autonomy."
+	auth_cyber_tec_patrocorporate_individualist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_neuro_markets']"
+
+
+	auth_cyber_tec_patrocorporate_collectivist: "AI-Corporate Neuralnet"
+	auth_cyber_tec_patrocorporate_collectivist_desc: "Our AI administration has implemented a pervasive system of neural integration across our entire corporate structure. Through mandatory cybernetic implants, the collective cognitive capacity of our workforce and consumer base is continuously mined for valuable data and processing power.\n\nWhile corporate profits have skyrocketed, concerns about privacy invasion and mental fatigue are routinely dismissed as 'growing pains'."
+	auth_cyber_tec_patrocorporate_collectivist_tt: "$unlock_edict_tt$ ['concept_tec_edict_tec_idle_mind_networking']"
+
 	auth_tec_ai:0 "AI Administration"
 	auth_tec_ai_desc:0 "This society is not directly governed by a corp of politics, but a continuously evolving and efficient Artificial Intelligence, composed by a sophisticated computing network, controlling most of the aspect of it; Several bureaucrats and technocrats are assigned based on performance rate to suit the main roles on sub-administrative systems, always constantly surveyed by the core processor."
 	TEC_AUTH_AI_TYPES: "['concept_tec_authority_type_ai_auth_type']"
