--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -392,3 +392,16 @@ tec_cyber.1.desc.neutral: "The adoption of cybernetic implants has been measured
 tec_cyber.1.a: "Personal AI Uplinks for all!"
 tec_cyber.1.b: "The collective of AI and organic mind, blurred..."
 tec_cyber.1.c: "$cyber_keep_auth_option$"
+
+
+
+tec_cyber.4.name: "Capitalized Neurons"
+tec_cyber.4.desc.individualist: "Our AI-driven corporate structure has embraced hyper-individualization through advanced neural interfaces. Each citizen now experiences a uniquely tailored economic reality, with AI algorithms constantly adapting to personal preferences and behaviors. This has transformed our market into a dynamic, ever-shifting landscape of personalized opportunities and custom-crafted experiences."
+
+tec_cyber.4.desc.collectivist: "The corporate structure has implemented a neural network that promises to integrate all citizens, including the previously "unproductive" unemployed. Through subsidized cybernetic implants, we're tapping into the vast, untapped cognitive potential of our entire population. As the collective network grows, individual concerns about privacy and mental autonomy are overshadowed by the allure of contribution and the pressure to participate. The boundaries between personal thought and corporate resource blur, hinting at a future where no neural capacity goes to waste—or unmonetized."
+
+tec_cyber.4.desc.neutral: "The introduction of cybernetic implants has smoothly integrated into our established AI-Corporate framework, enhancing efficiency without radically altering our societal structure. These neural interfaces serve as streamlined conduits between our citizens and the corporate AI, optimizing workflow and market interactions. While the technology has undoubtedly improved productivity and decision-making, our society maintains a familiar balance between technological advancement and established corporate norms, preserving much of our pre-cybernetic way of life."
+
+tec_cyber.4.a: "Personalized Offers, for your capabilities!"
+tec_cyber.4.b: "The Neuralnet pays by the moment spared, sign up now!"
+tec_cyber.4.c: "$cyber_keep_auth_option$"
